Bug 324401 - kpeople: "Move here" / "Copy here" do nothing
Summary: kpeople: "Move here" / "Copy here" do nothing
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-02 13:46 UTC by Sven Brauch
Modified: 2013-09-02 15:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2013-09-02 13:46:39 UTC
Merging two contacts works fine, but adding further contacts via drag-drop does not work.

Reproducible: Always

Steps to Reproduce:
1. Merge two contacts to form a meta contact.
2. Try to add a new contact to that meta contact by dragging it onto the group.
3. Select "Copy here".
4. Nothing happens.
Comment 1 David Edmundson 2013-09-02 15:28:43 UTC
Git commit 25c1c836930055cf3153f04642c5333265cd3794 by David Edmundson.
Committed on 02/09/2013 at 15:09.
Pushed by davidedmundson into branch 'master'.

Allow drag + drop contacts with people
REVIEW: 112452

M  +5    -1    contact-list-widget.cpp

http://commits.kde.org/telepathy-contact-list/25c1c836930055cf3153f04642c5333265cd3794