Allow drag + drop contacts with people

BUG: 324401
REVIEW: 112452